syntax = "proto3";

package api;


service Entities {
        rpc SearchEntity(SearchEntitiesRequest) returns (EntitiesResponse) {}
        rpc GetEntity(GetEntityRequest) returns (Entity) {}
        rpc GetEntitiesBySystemID(GetEntitiesBySystemIDRequest) returns (EntitiesResponse) {}
        rpc GetEntitiesByCallsign(GetEntitiesByCallsignRequest) returns (EntitiesResponse) {}
}

message SearchEntitiesRequest {
        string query = 1;
        string country_iso = 2;
        EntityType type = 3;
        SystemType system = 4;
        Namespace namespace = 7;
        uint32 page_size = 5;
        uint32 page_start = 6;
}

message GetEntityRequest {
        uint64 id = 1;
}

message GetEntitiesBySystemIDRequest {
        repeated uint64 system_id = 1;
}

message GetEntitiesByCallsignRequest {
    repeated string callsign = 1;
}

message EntitiesResponse {
        repeated Entity entities = 1;
        Pagination pagination = 2;
}

message Pagination {
        uint32 total = 1;
        uint32 page_start = 2;
        uint32 page_size = 3;
}

enum Namespace {
    UNKNOWN_NAMESPACE = 0;
    RADIOID = 1;
    DMRMARC = 2;
    BRANDMEISTER = 3;
    TGIF = 4;
}

enum SystemType {
     UNKNOWN_SYSTEM_TYPE = 0;
     DMR = 1;
     NXDN = 2;
}

enum EntityType {
     UNKNOWN_ENTITY_TYPE = 0;
     HAM = 1;
     TALKGROUP = 2;
}

message Entity {
        uint64 id = 1;
        uint64 system_id = 2;
        SystemType system = 3;
        EntityType type = 4;
        Namespace namespace = 5;
        string callsign = 6;
        string name = 7;
        string surname = 8;
        string country = 9;
        string country_iso = 10;
        string state = 11;
        string city = 12;
}